website/static/css/base.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

:root {
    --ff-primary: 'Source Code Pro', monospace;
    --ff-secondary: ;
    
    --fw-reg: 300;
    --fw-bold: 600;
    
    --clr-white: #fff;
    --clr-light: #d9d2b2;
    --clr-medium: #344455;
    --clr-dark: #233145;
    --clr-main: linear-gradient(-45deg, #23a6d5, #23d5ab);
    
    --btn-gradient: linear-gradient(-45deg, #23a6d5, #23d5ab);
    --bg-gradient: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
    
    --fs-h1: 2rem;
    --fs-h2: 1.5rem;
    --fs-h3: 1.125rem;
    --fs-body: 0.9rem;

    --ts0: 0px 0px 10px rgba(255,255,255,0.9);
    --ts1: 2px 2px 0px rgba(0,0,0,0.3);
    --ts2: 2px 2px 2px rgba(0,0,0,0.3);
    --ts3: 2px 2px 5px rgba(0,0,0,0.3);


    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
          0.125em 0.125em 0.25em rgba(0,0,0,.15);
    
    --bs2: 0 0 1em rgba(0,0,0,.25),
          0 0 1em rgba(0,0,0,.15);

    --s: 125px;

    --c1: #fff;
    --c4: #c2c1c1;
    --c2: #b1b1b1;
    --c3: #dddddd;
}

@media (min-width: 800px) {
    :root {
        --fs-h1: 2.5rem;
        --fs-h2: 2rem;
        --fs-h3: 1.25rem;
        --fs-body: 1rem;

        --s: 200px;
    }
}

/* General styles */

html {
    scroll-behavior: smooth;
}

body {
    color: var(--clr-dark);
    margin: 0;
    font-family: var(--ff-primary);
    font-size: var(--fs-body);
    line-height: 1.6;
    letter-spacing: 0.05em;
}

.bg {
    animation:slide 3s ease-in-out infinite alternate;
    background-image: linear-gradient(-60deg, #23d5ab 50%, #23a6d5 50%);
    bottom:0;
    left:-50%;
    opacity:.5;
    position:fixed;
    right:-50%;
    top:0;
    z-index:-1;
}

.bg2 {
animation-direction:alternate-reverse;
animation-duration:4s;
}

.bg3 {
animation-duration:5s;
}

@keyframes slide {
    0% {
      transform:translateX(-25%);
    }
    100% {
      transform:translateX(25%);
    }
  }

a,
i {
    text-decoration: none;
    cursor: pointer;
    overflow: hidden;
}

section {
    padding: 6em 0;
}

.section_title {
    font-size: var(--fs-h1);
    text-align: center;
    font-weight: var(--fw-bold);
    letter-spacing: 0.15em;
    text-shadow: var(--ts2);
}

.section_title::after {
    content: '';
    position: relative;
    display: block;
    height: 5px;
    width: 3em;
    background: var(--clr-main);
    left: 50%;
    transform: translateX(-50%);
    border-radius: 5px;
    margin: 0.2em 0 0.4em;
}

.section_subtitle {
    font-size: var(--fs-h3);
    text-align: center;
    letter-spacing: 0.1em;
    margin: 0em 2em 3em;
    text-shadow: var(--ts3);
}

.container {
    max-width: 1400px;
    margin: auto;
}

.shortcut_button {
    display: block;
    width: 10em;
    margin: 2em auto 0;
    color: var(--clr-white);
    background: var(--clr-main);
    padding: 0.5em 2em;
    font-size: var(--fs-h3);
    text-align: center;
    border-radius: 5px;
    transition: transform 0.5s;
    box-shadow: var(--bs);
    text-shadow: var(--ts3);
}

.shortcut_button:hover {
    transform: translateY(-5px);
    color: var(--clr-white);
}



/* Header */

.header {
    background-color: var(--clr-dark);
    padding: 0.5em 1em;
    font-weight: var(--fw-bold);
    position: sticky;
    top: 0;
    box-shadow: var(--bs);
    z-index: 100;
}

.nav-bar {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: space-between;
    margin: 0 2em;
    font-size: var(--fs-body);
}

.nav-bar a {
    background: var(--clr-light);
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

.nav-bar a:hover {
    background: var(--clr-main);
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

.nav_bar_links a {
    margin-left: 2em;
}

.nav_bar_home {
    display: flex;
    align-items: center;
}

.my_image {
    width: 50px;
    height: 100%;
    border-radius: 50%;
    border: 2px solid transparent;
    overflow: hidden;
    margin-right: 1em;
    background: var(--clr-main);
}

.hamburger {
    display: none;
    color: var(--clr-light);
    font-size: 1.6em;
}

.close-mark {
    display: none;
    color: var(--clr-light);
    font-size: 1.6em;
}

@media (max-width: 800px) {
    .nav_bar_links {
        display: block;
        position: absolute;
        top: -350px;
        text-align: end;
        right: 0;
        background-color: var(--clr-dark);
        transition: 0.5s;
    }
    .nav_bar_links.active {
        top: 68px;
    }
    .nav_bar_links a {
        display: block;
        padding: 1em;
        padding-right: 3em;
        padding-left: 5em;
        margin-left: 0;
        border-top: 1px solid var(--clr-light);
    }
    .hamburger {
        display: flex;
    }
}

/* Intro */

.intro {
    display: block;
    height: calc(100vh - 2em);
    text-align: center;
}

.intro_title {
    font-size: calc(var(--fs-h1) * 1.75);
    font-weight: var(--fw-bold);
    margin-top: 1em;
    text-shadow: var(--ts1);
}

.intro_subtitle {
    font-size: var(--fs-h1);
    text-shadow: var(--ts2);
}

.intro-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 85%;
    margin: 0 2em;
}

.intro-text .section_title {
    font-weight: var(--fw-bold);
}

.intro_social {
    position: absolute;
    display: flex;
    flex-direction: column;
    top: 50%;
    background-color: var(--clr-dark);
    transform: translateY(-50%);
    box-shadow: var(--bs);
}

.intro_social a:hover {
    background: var(--clr-main);
}

.intro_social i {
    padding: 1.5em 1em;
}

.intro_social .fa-brands,
.intro_social .fa-solid {
    font-size: var(--fs-h2);
    padding: 0.6em 0.4em;
    width: 100%;
    text-align: center;
    color: var(--clr-light);
    transition: scale 0.3s ease-in-out;

}

.intro_social .fa-brands:hover,
.intro_social .fa-solid:hover {
    scale: 1.2;
}
/* ... */

